# rust-sdks

livekit-wakeword/: Cargo.toml  build.rs
livekit-wakeword/src/: lib.rs  wakeword.rs
