[package]
name = "livekit-wakeword"
version = "0.1.3"
description = "ONNX-based wake word detection for LiveKit"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
ndarray = "0.17.2"
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
resampler = "0.4"
thiserror = "2"

[dev-dependencies]
hound = "3.5"
